Fixed issue of name floating off screen

--- a/src/styles.css
+++ b/src/styles.css
@@ -213,16 +213,14 @@ form button {
 
 .hero-text {
     margin-left: 5%;
-    margin-bottom: 20%;
     cursor: default;
-
 }
 
 .content {
     display: flex;
     height: 100%;
     justify-content: space-between;
-    align-items: center;
+    align-items: flex-start;
 }
 
 .socials {
